--- a/index.html
+++ b/index.html
@@ -2,3 +2,14 @@
 <body>
 <title>Page Title</title>
 </body>
+<h1>Dog 1</h1>
+</body>
+<h2>Dog 2</h2>
+</body>
+<h3>Dog 3</h3>
+</body>
+<h4>Dog 4</h4>
+</body>
+<h5>Dog 5</h5>
+</body>
+<h6>Dog 6</h6>
