--- a/index.html
+++ b/index.html
@@ -2,14 +2,22 @@
 <body>
 <title>Page Title</title>
 </body>
+
+<body>
 <h1>Dog 1</h1>
 </body>
+<body>
 <h2>Dog 2</h2>
 </body>
+<body>
 <h3>Dog 3</h3>
 </body>
+<body>
 <h4>Dog 4</h4>
 </body>
+<body>
 <h5>Dog 5</h5>
 </body>
+<body>
 <h6>Dog 6</h6>
+</body>
