--- a/index.html
+++ b/index.html
@@ -21,3 +21,15 @@
 <body>
 <h6>Dog 6</h6>
 </body>
+
+<body>
+<p><i>Corgi's are dogs loved by many.</i></p>
+</body>
+
+<body>
+Corgi's go back to the 10th century and are believed to be used as herding dogs. They are good with other animals, especially other dogs. Corgi's are very smart and love attention.
+They are very energrtic and enjoy playing. They are loyal to their owners and will never leave your side. These dogs will follow you around all day.
+</body>
+<body>
+<h3>Corgi's are amazing pets!</h3>
+</body>
