--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ They are very energrtic and enjoy playing. They are loyal to their owners and wi
   <h1>Corgi Images</h1>
   <ul>
     <li><img src="https://i.pinimg.com/originals/10/e3/8e/10e38e932e3686fbc16efbe639c19b1e.png"></img></<li>
-    <li><<img src="https://images2.minutemediacdn.com/image/upload/c_fill,g_auto,h_1248,w_2220/f_auto,q_auto,w_1100/v1555294910/shape/mentalfloss/istock_100323527_small.jpg"></<img></<li>
+    <li><<img src="https://cdn1-www.dogtime.com/assets/uploads/gallery/pembroke-welsh-corgi-dog-breed-pictures/prance-8.jpg"></<img></<li>
     <li><<img src="https://cache.desktopnexus.com/thumbseg/2369/2369825-bigthumbnail.jpg"></img></<li>
   </ul>
 </body>   
