--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Page Title</title>
 <h1>Corgi Images</h1>
 <ul>
-  <li><img src="https://i.pinimg.com/originals/10/e3/8e/10e38e932e3686fbc16efbe639c19b1e.png"></img></</li>
+  <li><img src="https://i.pinimg.com/originals/10/e3/8e/10e38e932e3686fbc16efbe639c19b1e.jpg"></img></</li>
   <li><img src="https://cdn1-www.dogtime.com/assets/uploads/gallery/pembroke-welsh-corgi-dog-breed-pictures/prance-8.jpg"></img></</li>
   <li><img src="https://cache.desktopnexus.com/thumbseg/2369/2369825-bigthumbnail.jpg"></img></</li>
 </ul>
