--- a/index.html
+++ b/index.html
@@ -1,4 +1,37 @@
 <!DOCTYPE html>
+
+</body>
+<body>
+<h1>Dog 1</h1>
+</body>
+<body>
+<h2>Dog 2</h2>
+</body>
+<body>
+<h3>Dog 3</h3>
+</body>
+<body>
+<h4>Dog 4</h4>
+</body>
+<body>
+<h5>Dog 5</h5>
+</body>
+<body>
+<h6>Dog 6</h6>
+</body>
+
+<body>
+<p><i>Corgi's are dogs loved by many.</i></p>
+</body>
+
+<body>
+Corgi's go back to the 10th century and are believed to be used as herding dogs. They are good with other animals, especially other dogs. Corgi's are very smart and love attention.
+They are very energrtic and enjoy playing. They are loyal to their owners and will never leave your side. These dogs will follow you around all day.
+</body>
+<body>
+<h3>Corgi's are amazing pets!</h3>
+</body>
+<img src="https://i.pinimg.com/originals/e1/f0/6b/e1f06bae57179c431c1ced2b0439fa3f.png"></img>
 <body>
   <title>Page Title</title>
   <h1>Corgi Images</h1>
@@ -7,4 +40,3 @@
     <li><img src="https://cdn1-www.dogtime.com/assets/uploads/gallery/pembroke-welsh-corgi-dog-breed-pictures/prance-8.jpg"></img></li>
     <li><img src="https://cache.desktopnexus.com/thumbseg/2369/2369825-bigthumbnail.jpg"></img></li>
   </ul>
-</body>
