--- a/mysecondwebpage.html
+++ b/mysecondwebpage.html
@@ -5,6 +5,11 @@
     <title>My test page</title>
   </head>
   <body>
-    <p>This is my page</p>
+    <p>This is my second page</p>
+
+
+<a href="index.html">Go to my Index Web Page</a>
+
+
   </body>
 </html>
