--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ They are very energrtic and enjoy playing. They are loyal to their owners and wi
   </ol>
 
 
-<a href="mysecondwebpage.html">link text</a>
+<a href="mysecondwebpage.html">Go To My Second Web Page</a>
 
 
 </body>
