--- a/mysecondwebpage.html
+++ b/mysecondwebpage.html
@@ -9,7 +9,7 @@
 
 
 <a href="index.html">Go to my Index Web Page</a>
-
+<li><img src"https://s3.amazonaws.com/intranet-projects-files/holberton-learning_web_programming/329/holberton-logo.png"><img></li>
 
   </body>
 </html>
