--- a/mysecondwebpage.html
+++ b/mysecondwebpage.html
@@ -8,8 +8,11 @@
     <p>This is my second page</p>
 
 
-<a href="index.html">Go to my Index Web Page</a>
-<li><img src"https://s3.amazonaws.com/intranet-projects-files/holberton-learning_web_programming/329/holberton-logo.png"><img></li>
+<p><a href="index.html">Go to my Index Web Page</a></p>
+
+<p><a href="https://www.holbertonschool.com/">
+  <<img src="holberton-logo.png">
+  </a></p>
 
   </body>
 </html>
