--- a/mysecondwebpage.html
+++ b/mysecondwebpage.html
@@ -10,9 +10,7 @@
 
 <p><a href="index.html">Go to my Index Web Page</a></p>
 
-<p><a href="https://www.holbertonschool.com/">
-  <<img src="holberton-logo.png">
-  </a></p>
+<p><a href="https://www.holbertonschool.com/"><img src="holberton-logo.png"></a></p>
 
   </body>
 </html>
