--- a/mysecondwebpage.html
+++ b/mysecondwebpage.html
@@ -11,6 +11,7 @@
 <p><a href="index.html">Go to my Index Web Page</a></p>
 
 <p><a href="https://www.holbertonschool.com/"><img src="holberton-logo.png"></a></p>
+<div style="color:green">Green for the win!</div>
 
   </body>
 </html>
