--- a/mysecondwebpage.html
+++ b/mysecondwebpage.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>My test page</title>
   </head>
   <body>
@@ -12,6 +13,7 @@
 
 <p><a href="https://www.holbertonschool.com/"><img src="holberton-logo.png"></a></p>
 <div style="color:green">Green for the win!</div>
+<div id="firstname">White Writting On Red Text.</div>
 
   </body>
 </html>
