--- a/mysecondwebpage.html
+++ b/mysecondwebpage.html
@@ -13,7 +13,7 @@
 
 <p><a href="https://www.holbertonschool.com/"><img src="holberton-logo.png"></a></p>
 <div style="color:green">Green for the win!</div>
-<div id="firstname">White Writting On Red Text.</div>
+<div id="white_on_red">White Writting On Red Text.</div>
 
   </body>
 </html>
