--- a/mysecondwebpage.html
+++ b/mysecondwebpage.html
@@ -8,12 +8,12 @@
   <body>
     <p>This is my second page</p>
 
-
+<link rel="stylesheet" href="style.css">
 <p><a href="index.html">Go to my Index Web Page</a></p>
 
 <p><a href="https://www.holbertonschool.com/"><img src="holberton-logo.png"></a></p>
 <div style="color:green">Green for the win!</div>
-<div id="white_on_red">White Writting On Red Text.</div>
+<div id="white_on_red">White writing on red background.</div>
 
   </body>
 </html>
