--- a/mysecondwebpage.html
+++ b/mysecondwebpage.html
@@ -12,7 +12,7 @@
 <p><a href="index.html">Go to my Index Web Page</a></p>
 
 <p><a href="https://www.holbertonschool.com/"><img src="holberton-logo.png"></a></p>
-<div style="color:green">Green for the win!</div>
+<div style=color:green">Green for the win!</div>
 <div id="white_on_red">White writing on red background.</div>
 
   </body>
