--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>My test page</title>
-    r<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
     <p>This is my page</p>
+
 
 
 <h1>Dog 1</h1>
@@ -54,6 +55,18 @@ They are very energrtic and enjoy playing. They are loyal to their owners and wi
 
 
 <a href="mysecondwebpage.html">Go To My Second Web Page</a>
+
+<div class="jumbotron">
+  <center>
+    Hello
+  </center>
+</div>
+
+<div class="row" style="background-color:blue;height:200px;">
+  <div class="col">
+    Bingo
+  </div>
+</div>
 
 
 </body>
