--- a/index.html
+++ b/index.html
@@ -56,17 +56,56 @@ They are very energrtic and enjoy playing. They are loyal to their owners and wi
 
 <a href="mysecondwebpage.html">Go To My Second Web Page</a>
 
+<p><style>
+div.static {
+  position: static;
+  border: 3px solid black;
+}
+</style></p>
+
+<p><div class="static">
+first row
+</div></p>
+
 <div class="jumbotron">
   <center>
-    Hello
+    hello
   </center>
 </div>
 
-<div class="row" style="background-color:blue;height:200px;">
-  <div class="col">
-    Bingo
-  </div>
+<div class="container">
+  <!-- Row with three equal colums -->
+  <div class="row">
+    <div class="col" style="background-color:blue;height:200px;">
+      first col
 </div>
+<div class="col" style="background-color:white;height:200px;">
+  second col
+</div>
+<div class="col" style="background-color:red;height:200px;">
+  third col
+</div>
+</div>
+</div>
+
+<p><style>
+div.static {
+  position: static;
+  border: 3px solid black;
+}
+</style></p>
+
+<p><div class="static">
+  third row
+</div></p>
+
+
+
+
+
+
+
+
 
 
 </body>
