--- a/final_project/index.html
+++ b/final_project/index.html
@@ -59,16 +59,16 @@
 
       <!-- Jumbotron -->
       <div class="jumbotron">
-        <h1>Holberton!</h1>
-        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet.</p>
+        <h1>Holberton Girl Summer Coding Camp!</h1>
+        <p class="lead">A camp where young women can learn about how to code and make their own websites.</p>
         <p><a class="btn btn-lg btn-success" href="#" role="button">Get started today</a></p>
       </div>
 
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-lg-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <h2>About Me</h2>
+          <p>My name is Amy Solano-Cumbicos. I am a rising junior at Common Ground High School. I am 15 years old and I would like to persue a career in the medical feild, while also applying techonoloy and coding.</p>
           <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-lg-4">
