--- a/final_project/carousel.html
+++ b/final_project/carousel.html
@@ -108,7 +108,7 @@
         <div class="col-lg-4">
           <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
           <h2>Common Ground High School</h2>
-          <p>Cmommon Ground High School is an agricultural school. This high school tries to unite everyone to become a community. Common Ground has a farm and a small forest to </p>
+          <p>Cmommon Ground High School is an agricultural school. This high school tries to unite everyone to become a community. Common Ground has a farm and a small forest to connect with their urban enviornment. Everyone should feel like a leader and be part of this amazing community. </p>
           <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
