--- a/final_project/carousel.html
+++ b/final_project/carousel.html
@@ -114,7 +114,7 @@
         <div class="col-lg-4">
           <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
           <h2>Why am I building this website?</h2>
-          <p>I am making this website to learn about how to code.</p>
+          <p>I am making this website to learn how to make a website and the coding behind each website. Coding is a modern way of using technology to create things such as websites, applications for both computers and phones, and so much more. </p>
           <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
