--- a/final_project/carousel.html
+++ b/final_project/carousel.html
@@ -55,7 +55,7 @@
             <div class="carousel-caption d-none d-md-block text-left">
               <h1>Common Ground High School.</h1>
               <p>A high school.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">visit website:</a></p>
+              <p><a class="btn btn-lg btn-primary" href="http://commongroundct.org/" role="button">visit website:</a></p>
             </div>
           </div>
         </div>
