--- a/final_project/carousel.html
+++ b/final_project/carousel.html
@@ -60,12 +60,12 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
+          <img class="second-slide" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ-bwWiriX2hQf2L_iAlpt5DuOh3h93sst42nqq4Pdsu79jnKAu" alt="Second slide">
           <div class="container">
             <div class="carousel-caption d-none d-md-block">
               <h1>Holberton School.</h1>
               <p>A school that teaches technogoly to make a better future.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+              <p><a class="btn btn-lg btn-primary" href="https://www.holbertonschool.com/" role="button">Learn more</a></p>
             </div>
           </div>
         </div>
