--- a/final_project/carousel.html
+++ b/final_project/carousel.html
@@ -60,7 +60,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img class="second-slide" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ-bwWiriX2hQf2L_iAlpt5DuOh3h93sst42nqq4Pdsu79jnKAu" alt="Second slide">
+          <img class="second-slide" src="https://images.axios.com/qozklaNocIw-kOa2NXhDuQ_i2Jw=/0x0:5760x3240/1920x1080/2018/06/28/1530195505707.jpg" alt="Second slide">
           <div class="container">
             <div class="carousel-caption d-none d-md-block">
               <h1>Holberton School.</h1>
