--- a/final_project/carousel.html
+++ b/final_project/carousel.html
@@ -100,7 +100,7 @@
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="col-lg-4">
-          <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+          <img class="rounded-circle" src="https://mail.google.com/mail/u/0?ui=2&ik=6efd1e05b7&attid=0.1&permmsgid=msg-f:1641323571534977313&th=16c727179ad15921&view=att&disp=safe" alt="Generic placeholder image" width="140" height="140">
           <h2>About Me</h2>
           <p>My name is Amy Solano. I am 15 years old and a rising junior at Common Ground High School. I would like to purse a career in the medical feild, while applying techonology and coding.</p>
           <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
