--- a/final_project/cover.html
+++ b/final_project/cover.html
@@ -40,7 +40,10 @@
                     <a class="nav-link" href="file:///Users/summercamp/Documents/holberton-learning_web_programming/final_project/carousel.html#">About</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
+                    <a class="nav-link disabled" href="#">Self Care</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled" href="#">Studying Techniques</a>
                   </li>
                 </ul>
                 <form class="form-inline mt-2 mt-md-0">
