--- a/final_project/album2.html
+++ b/final_project/album2.html
@@ -37,14 +37,34 @@
         </div>
       </div>
     </div>
-    <div class="navbar navbar-inverse bg-inverse">
-      <div class="container d-flex justify-content-between">
-        <a href="#" class="navbar-brand">Album</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+    <div>
+    <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand" href="#">Carousel</a>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="file:///Users/summercamp/Documents/holberton-learning_web_programming/final_project/cover.html#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="file:///Users/summercamp/Documents/holberton-learning_web_programming/final_project/carousel.html#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="file:///Users/summercamp/Documents/holberton-learning_web_programming/final_project/album.html">Self Care</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="file:///Users/summercamp/Documents/holberton-learning_web_programming/final_project/album2.html">Studying Techniques</a>
+          </li>
+        </ul>
+        <form class="form-inline mt-2 mt-md-0">
+          <input class="form-control mr-sm-2" type="text" placeholder="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
       </div>
-    </div>
+    </nav>
+  </div>
 
     <section class="jumbotron text-center">
       <div class="container">
