--- a/final_project/carousel.html
+++ b/final_project/carousel.html
@@ -17,7 +17,7 @@
     <link href="carousel.css" rel="stylesheet">
   </head>
   <body>
-
+<div>
     <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -32,7 +32,10 @@
             <a class="nav-link" href="file:///Users/summercamp/Documents/holberton-learning_web_programming/final_project/carousel.html#">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
+            <a class="nav-link disabled" href="file:///Users/summercamp/Documents/holberton-learning_web_programming/final_project/album.html">Self Care</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="file:///Users/summercamp/Documents/holberton-learning_web_programming/final_project/album2.html">Studying Techniques</a>
           </li>
         </ul>
         <form class="form-inline mt-2 mt-md-0">
@@ -41,6 +44,7 @@
         </form>
       </div>
     </nav>
+  </div>
 
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
