--- a/final_project/carousel.html
+++ b/final_project/carousel.html
@@ -26,7 +26,7 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="file:///Users/summercamp/Documents/holberton-learning_web_programming/final_project/cover.html#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="file:///Users/summercamp/Documents/holberton-learning_web_programming/final_project/cover.html#">Home Page <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="file:///Users/summercamp/Documents/holberton-learning_web_programming/final_project/carousel.html#">About</a>
