--- a/final_project/album.html
+++ b/final_project/album.html
@@ -69,11 +69,8 @@
     <section class="jumbotron text-center">
       <div class="container">
         <h1 class="jumbotron-heading">Self Care</h1>
-        <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
-        <p>
-          <a href="#" class="btn btn-primary">Main call to action</a>
-          <a href="#" class="btn btn-secondary">Secondary action</a>
-        </p>
+        <p class="lead text-muted">Self care something we all don't think about, it is something that we need to do in order to boost our confidence and self-esteem. Self-care is loving yourself in your own special, unique way.</p>
+
       </div>
     </section>
 
@@ -83,41 +80,28 @@
         <div class="row">
           <div class="card">
             <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">Sleep well. Having enough sleep can help you live a better and healthier lifestyle. You will feel more relaxed and ready to start your day.</p>
           </div>
           <div class="card">
             <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">Eat healthy. Eating healthy foods can help your health and it makes you feel good about yourself. Getting accustomed to eating healthy foods or having a balanced diet can help your health by preventing things such as diabetes, but it can also help our brains be alert by preventing short term memory loss and inflammation. (which can have a long term effect on the brain and even the body)</p>
           </div>
           <div class="card">
             <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
-
-          <div class="card">
-            <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
-          <div class="card">
-            <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
-          <div class="card">
-            <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">Take a walk outside. Life can be stressful at times, and sometimes you need a break to separate yourself from the world. One way you can do that is by taking a walk outdoors and be in a calm environment where you can reflect and relax. </p>
           </div>
 
           <div class="card">
             <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">Unplug. Sometimes being caught up in work, school, friends, drama, etc can be so stressful. By turning of your devices and by avoiding all that, you can set time for yourself to think/reflect on what you will do to help you through any situation. </p>
           </div>
           <div class="card">
             <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">Read Books! Reading books is a simple way to help you feel happy. Find a book that sparks your interest and read it. There are also many books on self care that can help you. This is a simple way that you can relax and put yourself in a good and positive mood.</p>
           </div>
           <div class="card">
             <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">Schedule self care time. It's hard sometimes to find extra time, but it is important to do so. Having moments to yourself can help you feel good about yourself to boost up self love and energy in your own special way.</p>
           </div>
         </div>
 
