--- a/final_project/album.html
+++ b/final_project/album.html
@@ -79,7 +79,7 @@
 
         <div class="row">
           <div class="card">
-            <img data-src="holder.js/100px280/thumb" alt="Card image cap">
+            <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F38%2F2014%2F10%2F12220222%2Fshutterstock_420756877.jpg&w=400&c=sc&poi=face&q=85" alt="Card image cap">
             <p class="card-text">Sleep well. Having enough sleep can help you live a better and healthier lifestyle. You will feel more relaxed and ready to start your day.</p>
           </div>
           <div class="card">
