--- a/final_project/album2.html
+++ b/final_project/album2.html
@@ -69,8 +69,8 @@
     <section class="jumbotron text-center">
       <div class="container">
         <h1 class="jumbotron-heading">Studing Techniques</h1>
-        <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
-  
+        <p class="lead text-muted">As you all may know, we are all going back to school and it is that time where we have to study and learn. This page is to show some studying techniques to help your school year be a little easier.</p>
+
       </div>
     </section>
 
@@ -80,41 +80,28 @@
         <div class="row">
           <div class="card">
             <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">Walk before an exam. It's been proven that if you have some type of exercise, something as simple as walking; you can improve performance on the exam. (Research conducted by Dr. Chuck Hillman of the University of Illinois)</p>
           </div>
           <div class="card">
             <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">Paraphrasing and reflecting.Sometimes we read paragraphs and we don't even realize what the paragraph is telling us. To avoid this you can paraphrase what you read to get a better understanding of the content. </p>
           </div>
           <div class="card">
             <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
-
-          <div class="card">
-            <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
-          <div class="card">
-            <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
-          <div class="card">
-            <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">Make a study schedule. Making a study schedule can keep you organized on when you should study, how long you should study depending on each subject. Making a schedule is one thing but keeping it is another! When you make a study schedule, it has to be constant or else it wont work. This technique will not only help you study, but it will also help you manage your time wisely.</p>
           </div>
 
           <div class="card">
             <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">Studying in a distraction-free environment. As you study you can be distracted by something simple such as a notification on your phone. To avoid all distractions, silence your phone and put yourself in a quiet environment that you feel comfortable in. This could be outdoors, or even in your own bedroom. The point of this is for you to have a comfortable environment for you to study and concentrate on the work that needs to be done.</p>
           </div>
           <div class="card">
             <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">Take notes. Note taking is an essential need when it comes to studying. One way you can organize your notes is by color coding it. Meaning using colorful pens and pencils to make your notes stand out. You can also use sticky notes as a way to organize your notes.</p>
           </div>
           <div class="card">
             <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">Learn your studying style. There are many ways that people learn. There is the auditory learners (learn by listening), you can read out loud, read audiobooks, or talk to others about the work that you are doing. There are also visual learners (learn by seeing), you can use images or diagrams or use colors in your notes or highlight important things to represent key notes.</p>
           </div>
         </div>
 
