--- a/final_project/album2.html
+++ b/final_project/album2.html
@@ -79,7 +79,7 @@
 
         <div class="row">
           <div class="card">
-            <img data-src="holder.js/100px280/thumb" alt="Card image cap">
+            <img src="https://www.verywellfit.com/thmb/38D64UOsYzMuFf8WE0rcD8EYImE=/768x0/filters:no_upscale():max_bytes(150000):strip_icc()/walking-5c7fe61746e0fb000140a51d.jpg" alt="Card image cap">
             <p class="card-text">Walk before an exam. It's been proven that if you have some type of exercise, something as simple as walking; you can improve performance on the exam. (Research conducted by Dr. Chuck Hillman of the University of Illinois)</p>
           </div>
           <div class="card">
