--- a/final_project/cover.html
+++ b/final_project/cover.html
@@ -55,11 +55,9 @@
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">Cover your page.</h1>
-            <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
-            <p class="lead">
-              <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
-            </p>
+            <h1 class="cover-heading">Holberton Girls Camp.</h1>
+            <p class="lead">A summer program where girls have the oppertunity to learn how to create their own websites while working together.</p>
+
           </div>
 
           <div class="mastfoot">
